ajout du fichier form-complet

--- a/form-icones.html
+++ b/form-icones.html
@@ -22,7 +22,7 @@
         </label>
         <div class="relative">
           <span class="absolute top-3 left-3 text-gray-700"><ion-icon name="person-circle-outline"></ion-icon></span>
-          <input type="text" id="nom" placeholder="nom-complet"
+          <input type="text" id="nom" placeholder="nom-complet" name="nom-complet"
             class="w-full pl-10 pr-5 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder:text-gray-300 transition">
         </div>
       </div>
@@ -32,7 +32,7 @@
         </label>
         <div class="relative">
           <span class="absolute top-3 left-3 text-gray-700"><ion-icon name="mail-outline"></ion-icon></span>
-          <input type="email" id="mail" placeholder="@email.com"
+          <input type="email" id="mail" placeholder="@email.com" name="email"
             class="w-full pl-10 pr-5 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder:text-gray-300 transition">
         </div>
       </div>
@@ -42,7 +42,7 @@
         </label>
         <div class="relative">
           <span class="absolute top-3 left-3 text-gray-700"><ion-icon name="lock-closed-outline"></ion-icon></span>
-          <input type="password" id="password" placeholder="mot de passe"
+          <input type="password" id="password" placeholder="mot de passe" name="password"
             class="w-full pl-10 pr-5 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder:text-gray-300 transition">
         </div>
       </div>
@@ -52,7 +52,7 @@
         </label>
         <div class="relative">
           <span class="absolute top-3 left-3 text-gray-700"><ion-icon name="shield-checkmark-outline"></ion-icon></span>
-          <input type="password" id="confirmation" placeholder="confirmez"
+          <input type="password" id="confirmation" placeholder="confirmez" name="conf-password"
             class="w-full pl-10 pr-5 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder:text-gray-300 transition">
         </div>
       </div>
