--- a/product-modal.html
+++ b/product-modal.html
@@ -15,7 +15,7 @@
 
       <div class=" md:col-span-1"><!--Conteneur image-->
         <img src="images/headphone.png" alt="headphone"
-          class=" w-full max-h-96 md:h-auto mx-auto hover:scale-105 transition duration-500 ease-in-out ">
+          class=" w-full max-h-96 object-contain md:h-auto mx-auto hover:scale-105 transition duration-500 ease-in-out ">
       </div>
 
       <div class="space-y-4 md:col-span-2"><!--Contenu informatif-->
