Ajout image-gallery

--- a/product-modal.html
+++ b/product-modal.html
@@ -52,7 +52,7 @@
               <img src="images/weight.png" alt="weight-image" class="w-8 h-8">
               <span>Add to cart</span></button>
             <button
-              class="w-full md:w-1/2 flex items-center justify-center gap-3 bg-white border-2 border-gray-300 px-3 py-2 rounded-md hover:translate-y-0.5 duration-500 transition ease-in-outd ">
+              class="w-full md:w-1/2 flex items-center justify-center gap-3 bg-white border-2 border-gray-300 px-3 py-2 rounded-md hover:translate-y-0.5 duration-500 transition ease-in-out">
               <img src="images/heart.png" alt="heart-image" class="w-8 h-8">
               <span>Add to wishlist</span>
             </button>
